docs/tests/syntax/bad/testfile-instr_decl1-1.cpp
void m() { int x = 0 }
